# simple_pokedex

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
src/: lib.rs  main.rs
src/adapters/: app_error_impl.rs  mod.rs  openapi.rs
src/adapters/cache/: mod.rs  translation_cache.rs
src/adapters/clients/: funtranslations.rs  mod.rs  pokeapi.rs
src/adapters/clients/dto/: mod.rs  pokemon_species_dto.rs  translations.rs
src/adapters/http/: app_state.rs  mod.rs
src/adapters/http/dto/: mod.rs  pokemon_dto.rs
src/adapters/http/routes/: api_routes.rs  mod.rs  pokemon.rs
src/adapters/repositories/: mod.rs  pokemon_repository_impl.rs  translation_repository_impl.rs
src/application/: app_error.rs  mod.rs  traits.rs
src/application/use_cases/: mod.rs  pokemon_use_cases.rs
src/domain/entities/: pokemon.rs
src/infra/: app.rs  config.rs  mod.rs  setup.rs
