[package]
name = "simple_pokedex"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0.16"
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
axum = { version="0.8.6", features=["ws"]}
axum-macros = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15.7"
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6.6", features = ["trace"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mockall = "0.11"
